Fix truncation

--- a/packages/itwinui-css/src/tile/tile.scss
+++ b/packages/itwinui-css/src/tile/tile.scss
@@ -218,9 +218,13 @@ $thumbnail-selector: ':is(.iui-thumbnail-icon, .iui-tile-thumbnail-picture)';
 }
 
 @mixin iui-tile-name-label {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  &,
+  > .iui-link-overlay {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 }
 
 @mixin iui-tile-description {
